# domino

./: CMakeLists.txt  main.c
controller/: gameController.c  gameController.h
model/: gameModel.c  gameModel.h
view/: gameView.c  gameView.h
